--- a/templates/templates/main-tab-content.tpl.html
+++ b/templates/templates/main-tab-content.tpl.html
@@ -117,7 +117,7 @@
                 <img class="product-image" ng-src="{{product.image.sizes.Small.url}}">
               </td>
               <td>
-                <span class="product-name">{{product.name}}<span>
+                <span class="product-name">{{product.name}}</span>
               </td>
               <td>
                 <input size="50" ng-click="selectTarget($event)" class="product-url" value="{{product.clickUrl}}">
