--- a/templates/index.tpl.html
+++ b/templates/index.tpl.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="ng-app" ng-app="app" ng-controller="AppCtrl">
+<html class="no-js" id="ng-app" ng-app="app" ng-controller="AppCtrl">
   <head>
     <title ng-bind="pageTitle"></title>
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
@@ -8,17 +8,18 @@
     <link rel="stylesheet" type="text/css" href="http://localhost:5100/ribbon/shopsense-proto-0.0.1.css">
     <script type="text/javascript" src="http://localhost:5100/ribbon/shopsense-proto-0.0.1.js"></script>
 
-    {{#interpolatedScript}}
+    {{#interpolatedScript type="text/javascript"}}
       window.bootstrappedData = {{json $data}};
     {{/interpolatedScript}}
 
-    <style>
+    <style type="text/css">
       [data-hbs-hide] {
         display: none !important;
       }
 
-      [data-hbs-show] {
-        display: block !important;
+      .no-js .search-result {
+        position: relative !important;
+        float: left !important;
       }
     </style>
 
@@ -29,26 +30,26 @@
 
       <nav class="navbar navbar-default main-nav" role="navigation">
         <ul class="nav navbar-nav">
-          <li ng-class="{ active: openTab.name == 'search' }">
-            <a href="/?p=search" ng-model="openTab.name" btn-radio="'search'"><i class="fa fa-search"></i> Search</a>
+          <li class="{{ openTab.name == 'search' ? 'active' : '' }}">
+            <a href="/search" ng-model="openTab.name" btn-radio="'search'"><i class="fa fa-search"></i> Search</a>
           </li>
-          <!--           <li class="hidden-xs" class="dropdown" ng-class="{ active: openTab.name == 'tools' }">
+          <!--           <li class="hidden-xs" class="dropdown" class="{{ openTab.name == 'tools' ? 'active' : '' }}">
             <a href="#/tools">Tools</a>
           </li> -->
-          <li ng-class="{ active: openTab.name == 'insights' }">
-            <a href="/?p=insights" ng-model="openTab.name" btn-radio="'insights'"><i class="fa fa-bar-chart-o"></i> Insights</a>
+          <li class="{{ openTab.name == 'insights' ? 'active' : '' }}">
+            <a href="/insights" ng-model="openTab.name" btn-radio="'insights'"><i class="fa fa-bar-chart-o"></i> Insights</a>
           </li>
-          <li ng-class="{ active: openTab.name == 'account' }">
-            <a href="/?p=account" ng-model="openTab.name" btn-radio="'account'"><i class="fa fa-user"></i> Account</a>
+          <li class="{{ openTab.name == 'account' ? 'active' : '' }}">
+            <a href="/account" ng-model="openTab.name" btn-radio="'account'"><i class="fa fa-user"></i> Account</a>
           </li>
-          <li ng-class="{ active: openTab.name == 'tag' }">
-            <a href="/?p=tag" ng-model="openTab.name" btn-radio="'tag'"><i class="fa fa-circle-o"></i> Tag Photo</a>
+          <li class="{{ openTab.name == 'tag' ? 'active' : '' }}">
+            <a href="/tag" ng-model="openTab.name" btn-radio="'tag'"><i class="fa fa-circle-o"></i> Tag Photo</a>
           </li>
-          <li ng-class="{ active: openTab.name == 'tools' }">
-            <a href="/?p=tools" ng-model="openTab.name" btn-radio="'tools'"><i class="fa fa-th"></i> Widget</a>
+          <li class="{{ openTab.name == 'tools' ? 'active' : '' }}">
+            <a href="/tools" ng-model="openTab.name" btn-radio="'tools'"><i class="fa fa-th"></i> Widget</a>
           </li>
-          <li ng-class="{ active: openTab.name == 'post' }">
-            <a href="/?p=post" ng-model="openTab.name" btn-radio="'post'"><i class="fa fa-plus"></i> Post</a>
+          <li class="{{ openTab.name == 'post' ? 'active' : '' }}">
+            <a href="/post" ng-model="openTab.name" btn-radio="'post'"><i class="fa fa-plus"></i> Post</a>
           </li>
           <li class="main-selected-products-container">
             <a ng-show="selectedProducts.length" class="btn fa fa-times clear-selected-products-button" ng-click="utils.clear(selectedProducts)"></a>
@@ -63,21 +64,21 @@
 
     <nav class="mobile-nav visible-xs" role="navigation">
       <ul class="nav navbar-nav">
-        <li ng-click="go('/search')" ng-class="{ active: openTab.name == 'search' }">
+        <li class="{{ openTab.name == 'search' ? 'active' : '' }}">
           <i class="fa fa-search"></i>
-          <a>Products</a>
-        </li ng-click="go('/tools')">
-        <li ng-click="go('/tools')" class="dropdown" ng-class="{ active: openTab.name == 'tools' }">
+          <a href="/search">Products</a>
+        </li>
+        <li class="dropdown {{ openTab.name == 'tools' ? 'active' : '' }}">
           <i class="fa fa-star"></i>
-          <a>LinkStar</a>
+          <a href="/tools">LinkStar</a>
         </li>
-        <li ng-click="go('/insights')" ng-class="{ active: openTab.name == 'insights' }">
+        <li class="{{ openTab.name == 'insights' ? 'active' : '' }}">
           <i class="fa fa-bar-chart-o"></i>
-          <a>Insights</a>
+          <a href="/insights">Insights</a>
         </li>
-        <li ng-click="go('/account')" ng-class="{ active: openTab.name == 'account' }">
+        <li class="{{ openTab.name == 'account' ? 'active' : '' }}">
           <i class="fa fa-cog"></i>
-          <a>Account</a>
+          <a href="/account">Account</a>
         </li>
       </ul>
     </nav>
@@ -89,7 +90,7 @@
 
 
     <script>
-      _.each(document.querySelectorAll('[data-hbs-show], [data-hbs-hide]'), function (index, el) {
+      _.each(document.querySelectorAll('[data-hbs-show], [data-hbs-hide]'), function (el, index) {
         el.removeAttribute('data-hbs-show');
         el.removeAttribute('data-hbs-hide');
       });
