--- a/compiled-templates/templates/tag-photo.tpl.html
+++ b/compiled-templates/templates/tag-photo.tpl.html
@@ -1,7 +1,7 @@
 <div class="tools-container" ui-event="{ dragover: 'dragoverContainer($event)', drop: '$event.preventDefault()' }">
   <div class="widget-options">
     {{#forEach 'option' in taggedPhoto.sortedOptions}}
-      <div data-option="{{expression " option.name.toLowerCase() "}}" class="widget-option" data-ng-repeat="option in taggedPhoto.sortedOptions" data-ng-attr-data-option="&#123;&#123;option.name.toLowerCase()&#125;&#125;">
+      <div data-option="{{expression 'option.name.toLowerCase()'}}" class="widget-option" data-ng-repeat="option in taggedPhoto.sortedOptions" data-ng-attr-data-option="&#123;&#123;option.name.toLowerCase()&#125;&#125;">
 
         <div class="name"><span data-ng-bind="option.name">{{option.name}}</span>
         </div>
@@ -10,7 +10,8 @@
         {{/ifExpression}}
         >
         {{#ifExpression "option.type == 'range'"}}
-          <input min="{{option.min}}" max="{{option.max}}" step="{{option.step}}" data-ng-if="option.type == 'range'" type="range" data-ng-model="option.model" data-ng-attr-min="&#123;&#123;option.min&#125;&#125;">
+          <input min="{{option.min}}" max="{{option.max}}" step="{{option.step}}" data-ng-if="option.type == 'range'" type="range" data-ng-model="option.model" data-ng-attr-min="&#123;&#123;option.min&#125;&#125;" data-ng-attr-max="&#123;&#123;option.max&#125;&#125;"
+          data-ng-attr-step="&#123;&#123;option.step&#125;&#125;">
         {{/ifExpression}}
         ="option for option in option.options"></select>
       </div>
@@ -55,8 +56,8 @@
               {{#forEach 'img' in pageImages}}
                 <a data-ng-click="setDroppedImage(img)" data-ng-repeat="img in pageImages">
 
-              <img class="page-image" data-ng-src="&#123;&#123;img&#125;&#125;" src="<span data-ng-bind="img">{{img}}</span>" >
-            </a>
+                  <img class="page-image" data-ng-src="&#123;&#123;img&#125;&#125;" src="{{img}}">
+                </a>
               {{/forEach}}
 
             </div>
@@ -84,8 +85,8 @@
                   {{#forEach 'product' in selectedProducts}}
                     <a data-ng-click="tag.product = product" class="choose-product-for-tag" data-ng-repeat="product in selectedProducts">
 
-                <img data-ng-src="&#123;&#123;product.image.sizes.Small.url&#125;&#125;" src="<span data-ng-bind="product.image.sizes.Small.url">{{product.image.sizes.Small.url}}</span>" >
-              </a>
+                      <img data-ng-src="&#123;&#123;product.image.sizes.Small.url&#125;&#125;" src="{{product.image.sizes.Small.url}}">
+                    </a>
                   {{/forEach}}
 
                   <a data-ng-click="openTab.name = 'search'" class="fa fa-plus-circle add-product-to-tag"></a>
@@ -96,7 +97,7 @@
             {{#if tag.product}}
               <div data-ng-if="tag.product" class="fill">
 
-                <img class="product-image" data-ng-src="&#123;&#123;tag.product.image.sizes.Large.url&#125;&#125;" src="<span data-ng-bind=" tag.product.image.sizes.Large.url ">{{tag.product.image.sizes.Large.url}}</span>">
+                <img class="product-image" data-ng-src="&#123;&#123;tag.product.image.sizes.Large.url&#125;&#125;" src="{{tag.product.image.sizes.Large.url}}">
                 <span class="product-info">
               <span data-ng-bind="tag.product.name">{{tag.product.name}}</span>
 
