--- a/templates/modules/account/account.tpl.html
+++ b/templates/modules/account/account.tpl.html
@@ -1,16 +1,19 @@
 <div class="insights-container">
   <div ng-init="accountTab = 'settings'" class="left-navbar">
-    <a ng-class="{ active: accountTab == 'settings' }" ng-model="accountTab" btn-radio="'settings'" class="left-nav-link">Settings<i class="fa fa-caret-right"></i></a>
-    <a ng-class="{ active: accountTab == 'walkthrough' }" ng-model="accountTab" btn-radio="'walkthrough'" class="left-nav-link">Product Tour<i class="fa fa-caret-right"></i></a>
-    <a ng-class="{ active: accountTab == 'faq' }" ng-model="accountTab" btn-radio="'faq'" class="left-nav-link">FAQ<i class="fa fa-caret-right"></i></a>
-    <a ng-class="{ active: accountTab == 'support' }" ng-model="accountTab" btn-radio="'support'" class="left-nav-link">Support<i class="fa fa-caret-right"></i></a>
-    <a ng-class="{ active: accountTab == 'api' }" ng-model="accountTab" btn-radio="'api'" class="left-nav-link">API<i class="fa fa-caret-right"></i></a>
-    <a ng-class="{ active: accountTab == 'app' }" ng-model="accountTab" btn-radio="'app'" class="left-nav-link">iOS App<i class="fa fa-caret-right"></i></a>
+    <a href="/{{openTab.name}}/settings" class="left-nav-link {{ accountTab == 'settings' ? 'active' : '' }}" ng-model="accountTab" btn-radio="'settings'">Settings<i class="fa fa-caret-right"></i></a>
+    <a href="/{{openTab.name}}/walkthrough" class="left-nav-link {{ accountTab == 'walkthrough' ? 'active' : '' }}" ng-model="accountTab" btn-radio="'walkthrough'">Product Tour<i class="fa fa-caret-right"></i></a>
+    <a href="/{{openTab.name}}/faq" class="left-nav-link {{ accountTab == 'faq' ? 'active' : '' }}" ng-model="accountTab" btn-radio="'faq'">FAQ<i class="fa fa-caret-right"></i></a>
+    <a href="/{{openTab.name}}/support" class="left-nav-link {{ accountTab == 'support' ? 'active' : '' }}" ng-model="accountTab" btn-radio="'support'">Support<i class="fa fa-caret-right"></i></a>
+    <a href="/{{openTab.name}}/api" class="left-nav-link {{ accountTab == 'api' ? 'active' : '' }}" ng-model="accountTab" btn-radio="'api'">API<i class="fa fa-caret-right"></i></a>
+    <a href="/{{openTab.name}}/app" class="left-nav-link {{ accountTab == 'app' ? 'active' : '' }}" ng-model="accountTab" btn-radio="'app'">iOS App<i class="fa fa-caret-right"></i></a>
     <!-- <a ng-class="{ active: accountTab == 'linkstar' }" ng-model="accountTab" btn-radio="'linkstar'" class="left-nav-link">LinkStar<i class="fa fa-caret-right"></i></a> -->
   </div>
   <div class="tab-content">
     <div class="padded">
-      TODO...
+      <h1>{{accountTab}}</h1>
+      <p>
+        TODO...
+      <p>
     </div>
   </div>
 </div>
