--- a/templates/modules/insights/insights.tpl.html
+++ b/templates/modules/insights/insights.tpl.html
@@ -179,10 +179,12 @@
     </div>
 
     <div ng-show="activeTab.name == 'payments'" class="payments-container">
+      <h3>{{activeTab.name}}</h3>
       <div class="padded">TODO...</div>
     </div>
 
     <div ng-show="activeTab.name == 'referalls'" class="referalls-container">
+      <h3>{{activeTab.name}}</h3>
       <div class="padded">TODO...</div>
     </div>
   </div>
