--- a/templates/index.tpl.html
+++ b/templates/index.tpl.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <link rel="stylesheet" type="text/css" href="http://localhost:5100/ribbon/shopsense-proto-0.0.1.css">
-    <script ng-if="js" type="text/javascript" src="http://localhost:5100/ribbon/shopsense-proto-0.0.1.js"></script>
+    <link rel="stylesheet" type="text/css" href="/shopsense-proto-0.0.1.css">
+    <script ng-if="js" type="text/javascript" src="/shopsense-proto-0.0.1.js"></script>
 
     {{#interpolatedScript type="text/javascript"}}
       window.bootstrappedData = {{json $data}};
