--- a/templates/index.tpl.html
+++ b/templates/index.tpl.html
@@ -16,7 +16,7 @@
         display: none !important;
       }
 
-      .no-js .search-result {
+      .search-result {
         position: relative !important;
         float: left !important;
       }
