--- a/templates/index.tpl.html
+++ b/templates/index.tpl.html
@@ -17,7 +17,7 @@
       }
 
       .search-result {
-        position: relative !important;
+        position: static !important;
         float: left !important;
       }
 
